// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should fetch shared channels data when channel is shared 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
      <i
        class="icon icon-circle-multiple-outline"
        data-testid="SharedChannelIcon"
      />
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should match snapshot 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should match snapshot for desktop 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should match snapshot when tooltip is enabled 1`] = `
<div>
  <a
    aria-label="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
      </span>
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should match snapshot with aria label prefix and unread mentions 1`] = `
<div>
  <a
    aria-label="channel_label aria_label_prefix_ 2 mentions"
    class="SidebarLink unread-title"
    data-testid="sidebar-unread-channel"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <span
      class="badge"
      id="unreadMentions"
    >
      <span
        class="unreadMentions"
      >
        2
      </span>
    </span>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should not fetch shared channels data when data already exists 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
      <i
        class="icon icon-circle-multiple-outline"
        data-testid="SharedChannelIcon"
      />
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should not fetch shared channels for non-shared channels 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <button
        aria-controls="SidebarChannelMenu-MenuList-channel_id"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Channel options for "
        class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--style-inverted_g2m23_145 SidebarMenu_menuButton"
        id="SidebarChannelMenu-Button-channel_id"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_g2m23_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </a>
</div>
`;
